<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNomeUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogador_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dois_pontos" />

        <TextView
            android:id="@+id/tvPontosUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btPlusOneUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_one" />

        <Button
            android:id="@+id/btPlusThreeUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_three"/>

        <Button
            android:id="@+id/btPlusSixUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_six"/>

        <Button
            android:id="@+id/btPlusNineUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_nine"/>

        <Button
            android:id="@+id/btPlusTwelveUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_twelve"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNomeDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogador_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dois_pontos" />

        <TextView
            android:id="@+id/tvPontosDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btPlusOneDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_one"/>

        <Button
            android:id="@+id/btPlusThreeDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_three"/>

        <Button
            android:id="@+id/btPlusSixDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_six"/>

        <Button
            android:id="@+id/btPlusNineDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_nine"/>

        <Button
            android:id="@+id/btPlusTwelveDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_twelve"/>

    </LinearLayout>

    <Button
        android:id="@+id/btHistJogadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hist_de_jogadas"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/btZerarHist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zerar_historico"
        style="?android:attr/buttonBarButtonStyle" />

</LinearLayout>