<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNomeUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogador_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dois_pontos" />

        <TextView
            android:id="@+id/tvVitoriasUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNomeDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jogador_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dois_pontos" />

        <TextView
            android:id="@+id/tvVitoriasDois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

    </LinearLayout>

</LinearLayout>